--- a/NFCWriterPal/app/src/main/res/layout/content_message_selection.xml
+++ b/NFCWriterPal/app/src/main/res/layout/content_message_selection.xml
@@ -15,13 +15,17 @@
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <Button
-            android:text="Webpage"
+            android:text="@string/ms_webpage"
             android:id="@+id/ms_btn_webpage"
             android:layout_column="0"
             android:layout_row="0"
+            android:drawableStart="@drawable/ic_web_icon"
             android:drawableLeft="@drawable/ic_web_icon"
             android:background="@drawable/btn_msg_selection"
             android:layout_width="160dp"
@@ -29,10 +33,11 @@
             android:layout_gravity="left" />
 
         <Button
-            android:text="Email"
+            android:text="@string/ms_email"
             android:id="@+id/ms_btn_email"
             android:layout_row="0"
             android:layout_column="1"
+            android:drawableStart="@android:drawable/sym_action_email"
             android:drawableLeft="@android:drawable/sym_action_email"
             android:drawableTint="@android:color/holo_red_dark"
             android:background="@drawable/btn_msg_selection"
@@ -41,33 +46,11 @@
             android:layout_height="85dp" />
 
         <Button
-            android:text="Phone Number"
-            android:id="@+id/ms_btn_phone"
-            android:layout_column="0"
-            android:layout_row="1"
-            android:drawableLeft="@android:drawable/sym_action_call"
-            android:background="@drawable/btn_msg_selection"
-            android:layout_marginTop="15dp"
-            android:layout_width="160dp"
-            android:layout_height="85dp" />
-
-        <Button
-            android:text="App"
-            android:id="@+id/ms_btn_app"
-            android:layout_row="2"
-            android:layout_column="0"
-            android:drawableLeft="@mipmap/ic_launcher"
-            android:background="@drawable/btn_msg_selection"
-            android:layout_height="85dp"
-            android:layout_width="160dp"
-            android:layout_marginTop="15dp"
-            android:layout_gravity="left" />
-
-        <Button
-            android:text="Location"
+            android:text="@string/ms_location"
             android:id="@+id/ms_btn_location"
             android:layout_column="1"
             android:layout_row="2"
+            android:drawableStart="@android:drawable/ic_menu_mylocation"
             android:drawableLeft="@android:drawable/ic_menu_mylocation"
             android:drawableTint="@android:color/black"
             android:background="@drawable/btn_msg_selection"
@@ -77,10 +60,27 @@
             android:layout_gravity="right" />
 
         <Button
-            android:text="Text"
+            android:text="@string/ms_hms"
+            android:layout_width="match_parent"
+            android:layout_height="85dp"
+            android:id="@+id/ms_btn_hms"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/btn_msg_selection"
+            android:layout_rowSpan="3"
+            android:layout_columnSpan="2"
+            android:drawableStart="@drawable/ic_house_icon"
+            android:drawableLeft="@drawable/ic_house_icon"
+            android:textAlignment="center"
+            android:drawablePadding="-20dp" />
+
+        <Button
+            android:text="@string/ms_sms"
             android:id="@+id/ms_btn_text"
             android:layout_column="1"
             android:layout_row="1"
+            android:drawableStart="@android:drawable/sym_action_chat"
             android:drawableLeft="@android:drawable/sym_action_chat"
             android:drawableTint="@android:color/holo_blue_dark"
             android:background="@drawable/btn_msg_selection"
@@ -88,6 +88,31 @@
             android:layout_marginTop="15dp"
             android:layout_gravity="right"
             android:layout_width="160dp" />
+
+        <Button
+            android:text="@string/ms_phone"
+            android:id="@+id/ms_btn_phone"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:drawableStart="@android:drawable/sym_action_call"
+            android:drawableLeft="@android:drawable/sym_action_call"
+            android:background="@drawable/btn_msg_selection"
+            android:layout_marginTop="15dp"
+            android:layout_width="160dp"
+            android:layout_height="85dp" />
+
+        <Button
+            android:text="@string/ms_app"
+            android:id="@+id/ms_btn_app"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:drawableStart="@mipmap/ic_launcher"
+            android:drawableLeft="@mipmap/ic_launcher"
+            android:background="@drawable/btn_msg_selection"
+            android:layout_height="85dp"
+            android:layout_width="160dp"
+            android:layout_marginTop="15dp"
+            android:layout_gravity="left" />
     </GridLayout>
 
 </RelativeLayout>
