--- a/NFCWriterPal/app/src/main/res/layout/content_message_selection.xml
+++ b/NFCWriterPal/app/src/main/res/layout/content_message_selection.xml
@@ -113,6 +113,14 @@
             android:layout_width="160dp"
             android:layout_marginTop="15dp"
             android:layout_gravity="left" />
+
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner3"
+            android:layout_column="0"
+            android:layout_row="6"
+            android:layout_columnSpan="2" />
     </GridLayout>
 
 </RelativeLayout>
