--- a/NFCWriterPal/app/src/main/res/layout/snippet_write_list.xml
+++ b/NFCWriterPal/app/src/main/res/layout/snippet_write_list.xml
@@ -103,7 +103,6 @@
         android:textSize="14sp" />
 
     <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/snippet_w_var_one"
         android:layout_column="2"
@@ -112,10 +111,11 @@
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
         android:paddingTop="4dp"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:inputType="textMultiLine"
+        android:layout_width="220dp" />
 
     <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/snippet_w_var_two"
         android:layout_column="2"
@@ -124,10 +124,10 @@
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
         android:paddingTop="4dp"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:layout_width="220dp" />
 
     <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/snippet_w_var_three"
         android:layout_column="2"
@@ -138,5 +138,7 @@
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
         android:paddingTop="4dp"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:inputType="textMultiLine"
+        android:layout_width="220dp" />
 </GridLayout>
