--- a/NFCWriterPal/app/src/main/res/layout/content_main.xml
+++ b/NFCWriterPal/app/src/main/res/layout/content_main.xml
@@ -33,4 +33,15 @@
         android:layout_alignParentStart="true"
         android:drawableLeft="@drawable/ic_menu_write" />
 
+    <Button
+        android:text="@string/format"
+        android:layout_height="90dp"
+        android:layout_below="@+id/writeButton"
+        android:layout_marginTop="36dp"
+        android:id="@+id/main_btn_format"
+        android:layout_width="150dp"
+        android:layout_alignRight="@+id/writeButton"
+        android:layout_alignEnd="@+id/writeButton"
+        android:drawableLeft="@drawable/ic_menu_wipe" />
+
 </RelativeLayout>
