--- a/NFCWriterPal/app/src/main/res/layout/content_main.xml
+++ b/NFCWriterPal/app/src/main/res/layout/content_main.xml
@@ -44,4 +44,15 @@
         android:layout_alignEnd="@+id/writeButton"
         android:drawableLeft="@drawable/ic_menu_wipe" />
 
+    <Button
+        android:text="Share"
+        android:layout_width="150dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="45dp"
+        android:id="@+id/main_btn_share"
+        android:layout_below="@+id/main_btn_format"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:drawableLeft="@drawable/ic_menu_share" />
+
 </RelativeLayout>
