Added/edited custom buttons

--- a/NFCWriterPal/app/src/main/res/layout/content_format.xml
+++ b/NFCWriterPal/app/src/main/res/layout/content_format.xml
@@ -24,7 +24,7 @@
         android:textSize="20sp"
         android:textAlignment="center"
         android:textStyle="normal|bold"
-        android:background="@drawable/btn_format"
+        android:background="@drawable/btn_green"
         android:layout_centerInParent="false" />
 
     <TextView
