--- a/NFCWriterPal/app/src/main/res/layout/content_message_selection.xml
+++ b/NFCWriterPal/app/src/main/res/layout/content_message_selection.xml
@@ -27,7 +27,7 @@
             android:layout_row="0"
             android:drawableStart="@drawable/ic_web_icon"
             android:drawableLeft="@drawable/ic_web_icon"
-            android:background="@drawable/btn_msg_selection"
+            android:background="@drawable/btn_purple"
             android:layout_width="160dp"
             android:layout_height="85dp"
             android:layout_gravity="left" />
@@ -40,7 +40,7 @@
             android:drawableStart="@android:drawable/sym_action_email"
             android:drawableLeft="@android:drawable/sym_action_email"
             android:drawableTint="@android:color/holo_red_dark"
-            android:background="@drawable/btn_msg_selection"
+            android:background="@drawable/btn_purple"
             android:layout_width="160dp"
             android:layout_gravity="right"
             android:layout_height="85dp" />
@@ -53,7 +53,7 @@
             android:drawableStart="@android:drawable/ic_menu_mylocation"
             android:drawableLeft="@android:drawable/ic_menu_mylocation"
             android:drawableTint="@android:color/black"
-            android:background="@drawable/btn_msg_selection"
+            android:background="@drawable/btn_purple"
             android:layout_marginTop="15dp"
             android:layout_width="160dp"
             android:layout_height="85dp"
@@ -67,7 +67,7 @@
             android:layout_row="3"
             android:layout_column="0"
             android:layout_marginTop="15dp"
-            android:background="@drawable/btn_msg_selection"
+            android:background="@drawable/btn_purple"
             android:layout_rowSpan="3"
             android:layout_columnSpan="2"
             android:drawableStart="@drawable/ic_house_icon"
@@ -83,7 +83,7 @@
             android:drawableStart="@android:drawable/sym_action_chat"
             android:drawableLeft="@android:drawable/sym_action_chat"
             android:drawableTint="@android:color/holo_blue_dark"
-            android:background="@drawable/btn_msg_selection"
+            android:background="@drawable/btn_purple"
             android:layout_height="85dp"
             android:layout_marginTop="15dp"
             android:layout_gravity="right"
@@ -96,7 +96,7 @@
             android:layout_row="1"
             android:drawableStart="@android:drawable/sym_action_call"
             android:drawableLeft="@android:drawable/sym_action_call"
-            android:background="@drawable/btn_msg_selection"
+            android:background="@drawable/btn_purple"
             android:layout_marginTop="15dp"
             android:layout_width="160dp"
             android:layout_height="85dp" />
@@ -108,7 +108,7 @@
             android:layout_column="0"
             android:drawableStart="@mipmap/ic_launcher"
             android:drawableLeft="@mipmap/ic_launcher"
-            android:background="@drawable/btn_msg_selection"
+            android:background="@drawable/btn_purple"
             android:layout_height="85dp"
             android:layout_width="160dp"
             android:layout_marginTop="15dp"
