--- a/NFCWriterPal/app/src/main/res/layout/content_main.xml
+++ b/NFCWriterPal/app/src/main/res/layout/content_main.xml
@@ -15,44 +15,48 @@
 
     <Button
         android:text="@string/read"
-        android:layout_width="150dp"
-        android:layout_height="90dp"
         android:id="@+id/readButton"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:drawableLeft="@drawable/ic_menu_read" />
+        android:drawableLeft="@drawable/ic_menu_read"
+        android:background="@drawable/btn_blue"
+        android:layout_height="120dp"
+        android:layout_width="160dp" />
 
     <Button
         android:text="@string/write"
         android:id="@+id/writeButton"
-        android:layout_width="150dp"
-        android:layout_height="90dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:drawableLeft="@drawable/ic_menu_write" />
-
-    <Button
-        android:text="@string/format"
-        android:layout_height="90dp"
-        android:layout_below="@+id/writeButton"
-        android:layout_marginTop="36dp"
-        android:id="@+id/main_btn_format"
-        android:layout_width="150dp"
-        android:layout_alignRight="@+id/writeButton"
-        android:layout_alignEnd="@+id/writeButton"
-        android:drawableLeft="@drawable/ic_menu_wipe" />
+        android:drawableLeft="@drawable/ic_menu_write"
+        android:background="@drawable/btn_orange"
+        android:layout_height="120dp"
+        android:layout_width="160dp" />
 
     <Button
         android:text="Share"
-        android:layout_width="150dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/main_btn_share"
         android:layout_below="@+id/main_btn_format"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:drawableLeft="@drawable/ic_menu_share" />
+        android:drawableLeft="@drawable/ic_menu_share"
+        android:background="@drawable/btn_red"
+        android:layout_height="120dp"
+        android:layout_width="160dp" />
+
+    <Button
+        android:text="@string/format"
+        android:layout_marginTop="10dp"
+        android:id="@+id/main_btn_format"
+        android:drawableLeft="@drawable/ic_menu_wipe"
+        android:layout_below="@+id/writeButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/btn_green"
+        android:layout_height="120dp"
+        android:layout_width="160dp" />
 
 </RelativeLayout>
