--- a/NFCWriterPal/app/src/main/res/menu/activity_contact_drawer.xml
+++ b/NFCWriterPal/app/src/main/res/menu/activity_contact_drawer.xml
@@ -20,7 +20,7 @@
             android:title="Saved Functions" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="@string/communicate">
         <menu>
             <item
                 android:id="@+id/nav_share"
@@ -29,7 +29,7 @@
             <item
                 android:id="@+id/nav_contact"
                 android:icon="@drawable/ic_menu_contact"
-                android:title="Contact" />
+                android:title="@string/contact" />
         </menu>
     </item>
 
