--- a/NFCWriterPal/app/src/main/res/layout/content_write.xml
+++ b/NFCWriterPal/app/src/main/res/layout/content_write.xml
@@ -16,7 +16,10 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:orientation="vertical"
@@ -36,7 +39,7 @@
             android:layout_height="match_parent">
 
             <Button
-                android:text="Add New Message"
+                android:text="@string/write_add_record"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_row="1"
@@ -52,21 +55,11 @@
                 android:layout_height="match_parent">
 
                 <Button
-                    android:text="@string/save"
-                    android:layout_width="match_parent"
+                    android:text="@string/write_remove"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft= "5dp"
                     android:layout_marginRight="5dp"
-                    android:id="@+id/write_btn_save"
-                    android:background="@drawable/btn_blue"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:text="@string/save_and_write"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft= "5dp"
-                    android:layout_marginRight="5dp"
-                    android:id="@+id/write_btn_save_write"
+                    android:id="@+id/write_btn_remove"
                     android:background="@drawable/btn_blue"
                     android:layout_width="match_parent"
                     android:layout_weight="1" />
