--- a/NFCWriterPal/app/src/main/res/layout/content_write.xml
+++ b/NFCWriterPal/app/src/main/res/layout/content_write.xml
@@ -22,6 +22,38 @@
         android:layout_alignParentStart="true">
 
         <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="@string/write_msg_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/write_tv_msg_size_title"
+                android:textStyle="normal|bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/write_tv_msg_size"
+                android:layout_weight="1" />
+
+            <TextView
+                android:text="@string/write_tag_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/write_tv_tag_size_title"
+                android:textStyle="normal|bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/write_tv_tag_size"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="370dp">
